--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
     <head>
         <meta charset="UTF-8" />
-        <title>Run Buddy Run</title>
+        <title>Run Buddy </title>
     </head>
     <body>
         <!-- navigation -->
