--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="./assets/css/style.css" />
         <meta charset="UTF-8" />
         <title>Run Buddy </title>
     </head>
@@ -57,6 +56,10 @@
          <!-- footer -->
          <footer>
              <h2>❤️ Made with love by Run Buddy.</h2>
+             <div>
+                <a href="#">Read Our Privacy Policy</a><br />
+                &copy; 2019 Run Buddy, Inc.
+              </div>
          </footer>
 
 
