--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- List item element-->
         <li>
           <!-- Anchor element -->
-          <a href="#what-we-do">What We Do</a>
+          <a href="#what-We-do">What We Do</a>
         </li>
         <li>
           <a href="#what-you-do">What You Do</a>
